--- a/DriveNet.ipynb
+++ b/DriveNet.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Behaviour cloning project\n",
+    "\n",
+    "This notebook contains code for training neural network to predict steering angle for car by it's front camera image."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -26,6 +35,13 @@
     "from keras.preprocessing import image\n",
     "\n",
     "%pylab inline"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Define a model"
    ]
   },
   {
@@ -108,6 +124,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Define data\n",
+    "\n",
+    "Data generators for training, validation and testing"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
@@ -183,6 +208,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Training process"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
@@ -239,6 +271,13 @@
     "train_size, train_gen = generators[\"train\"]\n",
     "valid_size, valid_gen = generators[\"valid\"]\n",
     "model.fit_generator(train_gen, train_size / BATCH_SIZE, epochs=15, validation_data=valid_gen, validation_steps=valid_size / BATCH_SIZE)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Test and save the model"
    ]
   },
   {
